--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-07-01  Thomas Tanner  <tanner@ffii.org>
+
+	* doc/PLATFORMS: updated
+	* changed my email address
+
 1999-06-30  Thomas Tanner  <tanner@ffii.org>
 
 	* demo/foo.h: use LT_PARAMS instead of LTDL_PARAMS (this is not libltdl)
