--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-07-02  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	GNU libtool 1.3b was released.
+
+	* NEWS: inserted todays date.
+
 1999-07-02  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* doc/PLATFORMS: Tested on as many platforms as possible for me.
