--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	GNU libtool 1.3.3 was released.
 
 	* NEWS: inserted todays date.
+	* configure.in: bumped version to 1.3.3.
 
 1999-07-02  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
