--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-07-02  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* configure.in: bumped version to 1.3.3a.
+
 	GNU libtool 1.3.3 was released.
 
 	* NEWS: inserted todays date.
