--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.3d: 1999-??-??; CVS version 1.3c, Libtool team:
+* New --with-pic flag to control the generation of PIC/non-PIC code.
+* Various bugfixes
+
 New in 1.3b: 1999-07-02; CVS version 1.3a, Libtool team:
 * Complete inter-library dependencies support. It's now possible
   to link libtool libraries against other libtool libraries.
