--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,16 @@
+1999-07-30  Pavel Roskin  <pavel_roskin@geocities.com>
+
+	* ltmain.in: Ensure that gcc on HPsUX uses -fPIC, or else
+	initialised structures are sometimes emitted in the code section.
+	
 1999-07-02  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* configure.in: bumped version to 1.3.3a.
 
 	GNU libtool 1.3.3 was released.
 
+	* config.sub: updated from common.
+	* config.guess: ditto.
 	* NEWS: inserted todays date.
 	* configure.in: bumped version to 1.3.3.
 
