--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-09-27  Manfred Weichel  <weichel@global.nacamar.de>
+
+	* ltconfig.in (sysv5): Added support required for shared
+	library linking on SCO UW7.
+
 1999-09-22  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* ltconfig.in (whole-archive-flag-spec): test whether the
