--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-09-29  Vadim  <vadim@olly.ru>
+
+	* ltconfig.in (sysv):  More UW7 support.
+
 1999-09-28  Albert Cheng  <acheng@ncsa.uiuc.edu>
 
 	* ltmain.in (shlibpath_var): ensure the variable is non-empty before
