--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-10-01  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* configure.in (AC_OUTPUT_COMMANDS): generate ltmain.sh
+	* Makefile.am (ltmain.sh ltconfig): removed.  Automake inserts the 
+	rules to automatically call config.status.
+
 	* libtool.m4: be sure to AC_SUBST values no longer tested in
 	ltconfig.in.
 	* ltconfig.in: replaced several of the simple feature tests with
