--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-10-04  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* ltmain.in (-no-install):  This doesn't work on win32 since
+	the search path for libraries is not encoded in the binary,
+	and dlls not in $PATH won't be found.  Fall back to -no-fast-install
+	instead.
+
 	* ltmain.in (-no-fast-install):  Wrapper script used to add the
 	exeext on again when naming the wrapped executable.
 
