--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-10-06  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	* ltconfig.in: Accept osf5.
+	Reported by Sascha Schumann <sascha@schumann.cx>
+
 1999-10-04  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* ltmain.in (-no-fast-install):  Wrapper script used to add the
