--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.3.4: ????-??-??, CVS version 1.3.3a, Libtool team:
+* Support for Compaq Tru64 V5.0.
+* Many fine bugfixes.
+
 New in 1.3.3: 1999-07-02, CVS version 1.3.2a, Libtool team:
 * New `-dlpreopen force' flag to ensure that
   lt_preloaded_symbols is always defined.
